--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "node-sass": "^7.0.1",
     "prettier": "^2.6.0",
     "react": "^17.0.2",
+    "react-countup": "^6.2.0",
     "react-dom": "^17.0.2",
     "react-query": "^3.38.1",
     "react-router-dom": "^5.2.1",
