[Update] add edit product

--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "node-sass": "^7.0.1",
     "prettier": "^2.6.0",
     "react": "^17.0.2",
+    "react-countup": "^6.2.0",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^14.2.1",
+    "react-image-gallery": "^1.2.8",
     "react-query": "^3.38.1",
     "react-router-dom": "^5.2.1",
     "react-scripts": "5.0.0",
-    "react-countup": "^6.2.0",
     "react-tabs": "^4.2.0",
     "react-toastify": "^8.2.0"
   },
